# header_only_lib

./: CMakeLists.txt  README.md  appveyor.yml
cmake/: Config.cmake.in  sanitizers.cmake
examples/: CMakeLists.txt
include/header_only_lib/: calc.h  calc_step.h  logger.h
tests/: CMakeLists.txt  calc_step_test.cpp  calc_test.cpp  logger_test.cpp  main.cpp
